# DeepFinance

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml
docs/: _ai-rules.md  api-design.md  architecture.md  ui-design.md
docs/_scripts/: new.sh
docs/_templates/decisions/: _template.adr.md
docs/decisions/: financial-data-sources.adr.md  multi-agent-architecture.adr.md
docs/features/chunked-analysis/: spec.md
docs/features/doc-parser/: spec.md  state.md
docs/features/editor/: spec.md  state.md
docs/features/financial-tools/: spec.md  state.md
docs/features/macro-tools/: spec.md  state.md
docs/features/orchestrator/: log.md  spec.md  state.md
docs/features/publisher/: spec.md
docs/features/researcher/: log.md  spec.md  state.md
docs/features/reviewer/: spec.md
docs/features/web-tools/: log.md  spec.md  state.md
docs/research/: mineru_gpu_acceleration.md  parsing_optimization.md
scripts/: run_api.py  run_pipeline.py
src/: __init__.py
src/analyzers/: __init__.py  chunked_analyzer.py  data_researcher.py  document_analyzer.py  report_generator.py  section_parser.py
src/api/: __init__.py  main.py
src/api/routes/: files.py  (+5 more)
src/models/: __init__.py  qa.py  report.py
src/pipeline/: __init__.py  report_pipeline.py
src/prompts/: README.md  __init__.py
src/publisher/: __init__.py  exporters.py  publisher.py  schemas.py  templates.py
src/tools/: __init__.py  base.py
tests/: test_integration.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css
(+78 files in other folders)
